--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-share": "^5.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
